--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
   "require": {
     "php": ">=8.2",
     "intervention/image": "^3.11",
-    "roots/acorn": "^5.0"
+    "roots/acorn": "^5.0",
+    "stoutlogic/acf-builder": "^1.12"
   },
   "require-dev": {
     "laravel/pint": "^1.20"
